BPER/DEVF/force-app/main/default/objects/AbilitazioneGruppi__c/AbilitazioneGruppi__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AbilitazioneGruppi</label>
</CustomObject>