BPER/DEVF/force-app/main/default/objects/AbilitazioneGruppi__c/fields/Gruppo__c.field-meta.xml
<CustomField>
    <fullName>Gruppo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gruppo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>