BPER/DEVF/force-app/main/default/objects/AbilitazioneGruppi__c/fields/IDCed__c.field-meta.xml
<CustomField>
    <fullName>IDCed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IDCed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>