BPER/DEVF/force-app/main/default/objects/AbilitazioneGruppi__c/fields/Ruoli__c.field-meta.xml
<CustomField>
    <fullName>Ruoli__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ruoli</label>
    <length>255</length>
    <type>Text</type>
</CustomField>